--- a/css/style.css
+++ b/css/style.css
@@ -4,68 +4,108 @@ html {
 a {
   text-decoration: none; }
 
-.container {
+@media (max-width: 576px) {
+  h3 {
+    color: white !important;
+    background: #7a9bcc;
+    padding: 10px 10px;
+    margin: 0 !important; } }
+
+.containerMain {
   display: grid;
   width: 90%;
   margin: auto;
   grid-template-columns: 30% 70%; }
   @media (max-width: 576px) {
-    .container {
+    .containerMain {
       display: flex;
       width: 100%;
       flex-direction: column; } }
-  .container .studensInfo {
+  .containerMain .studensInfo {
     background: #7efcfc;
     padding: 0px 15px 15px 15px; }
-    .container .studensInfo h2 {
-      font-size: 20px; }
-    .container .studensInfo .detail__info .info {
+    .containerMain .studensInfo h2 {
+      font-size: 20px;
+      text-align: center;
+      margin-bottom: 30px; }
+      @media (max-width: 576px) {
+        .containerMain .studensInfo h2 {
+          text-align: start; } }
+    .containerMain .studensInfo .detail__info .info {
       display: grid;
-      grid-template-columns: 20% 80%;
+      grid-template-columns: 30% 70%;
       align-items: center;
       margin: 10px 0; }
-      .container .studensInfo .detail__info .info label {
+      .containerMain .studensInfo .detail__info .info label {
         font-weight: bold;
         font-size: 14px; }
-    .container .studensInfo .detail__info #fullname--error, .container .studensInfo .detail__info #mail--error,
-    .container .studensInfo .detail__info #phone--error,
-    .container .studensInfo .detail__info #addr--error {
+      .containerMain .studensInfo .detail__info .info input {
+        padding: 5px 10px;
+        border: 1px solid #ccc;
+        outline: none;
+        border-radius: 3px; }
+      .containerMain .studensInfo .detail__info .info input:hover {
+        border-color: #1dbfaf; }
+    .containerMain .studensInfo .detail__info #fullname--error, .containerMain .studensInfo .detail__info #mail--error,
+    .containerMain .studensInfo .detail__info #phone--error,
+    .containerMain .studensInfo .detail__info #addr--error,
+    .containerMain .studensInfo .detail__info #gender--error {
       display: flex;
       justify-content: flex-end;
       font-size: 14px;
       color: red; }
-    .container .studensInfo .detail__info .gender {
+    .containerMain .studensInfo .detail__info .gender {
       display: grid;
-      grid-template-columns: 20% 80%;
+      grid-template-columns: 30% 70%;
       align-items: center; }
-      .container .studensInfo .detail__info .gender label {
+      .containerMain .studensInfo .detail__info .gender label {
         font-weight: bold;
         font-size: 14px; }
-      .container .studensInfo .detail__info .gender .gender--item {
-        display: flex; }
-    .container .studensInfo .detail__info button {
-      margin-top: 10px; }
-  .container .studensList {
-    background: pink;
+      .containerMain .studensInfo .detail__info .gender .gender--item {
+        display: flex;
+        gap: 2rem; }
+    .containerMain .studensInfo .detail__info button {
+      margin-top: 15px;
+      float: right; }
+  .containerMain .studensList {
+    background: #d0ade2;
     padding: 0px 15px 15px 15px; }
-    .container .studensList h2 {
-      font-size: 2rem; }
-    .container .studensList .detail__list table {
-      width: 100%; }
-      .container .studensList .detail__list table tr {
-        display: grid;
-        grid-template-columns: 5% 15% 25% 15% 15% 10% 15%; }
-        .container .studensList .detail__list table tr th {
-          font-size: 16px; }
-      .container .studensList .detail__list table tr:nth-child(odd) {
-        background-color: #ffffff;
-        padding: 5px 0; }
-        .container .studensList .detail__list table tr:nth-child(odd) td {
-          text-align: center;
-          font-size: 14px; }
-      .container .studensList .detail__list table tr:nth-child(even) {
-        background-color: #c9c9c9;
-        padding: 5px 0; }
-        .container .studensList .detail__list table tr:nth-child(even) td {
-          text-align: center;
-          font-size: 14px; }
+    @media (max-width: 576px) {
+      .containerMain .studensList {
+        background: transparent; } }
+    .containerMain .studensList h2 {
+      font-size: 2rem;
+      text-align: center;
+      margin-bottom: 30px; }
+      @media (max-width: 576px) {
+        .containerMain .studensList h2 {
+          text-align: start; } }
+    @media (max-width: 576px) {
+      .containerMain .studensList .detail__list table thead .info {
+        display: none; } }
+    .containerMain .studensList .detail__list table thead .info th {
+      text-align: center; }
+    .containerMain .studensList .detail__list table tbody tr {
+      text-align: center; }
+      @media (max-width: 576px) {
+        .containerMain .studensList .detail__list table tbody tr {
+          display: grid;
+          grid-template-columns: 30% 48% 22%;
+          font-size: 12px;
+          margin-bottom: 2rem; } }
+      @media (max-width: 576px) {
+        .containerMain .studensList .detail__list table tbody tr td:first-child {
+          display: none; } }
+      .containerMain .studensList .detail__list table tbody tr td {
+        padding: 10px 0; }
+      .containerMain .studensList .detail__list table tbody tr td.control a {
+        color: white;
+        text-decoration: none;
+        padding: 2px 6px;
+        margin: 0 2px;
+        font-size: 10px;
+        border-radius: 3px; }
+      .containerMain .studensList .detail__list table tbody tr td.control a:first-child {
+        background: #3131ff; }
+      .containerMain .studensList .detail__list table tbody tr td.control a:last-child {
+        background: red; }
