--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,14 @@
 @import "variable.scss";
-.container {
+h3 {
+    @include phone {
+        color: white !important;
+        background: #7a9bcc;
+        padding: 10px 10px;
+        margin: 0 !important;
+    }
+}
+
+.containerMain {
     display: grid;
     width: 90%;
     margin: auto;
@@ -14,16 +23,30 @@
         padding: 0px 15px 15px 15px;
         h2 {
             font-size: 20px;
+            text-align: center;
+            margin-bottom: 30px;
+            @include phone {
+                text-align: start;
+            }
         }
         .detail__info {
             .info {
                 display: grid;
-                grid-template-columns: 20% 80%;
+                grid-template-columns: 30% 70%;
                 align-items: center;
                 margin: 10px 0;
                 label {
                     font-weight: bold;
                     font-size: 14px;
+                }
+                input {
+                    padding: 5px 10px;
+                    border: 1px solid #ccc;
+                    outline: none;
+                    border-radius: 3px;
+                }
+                input:hover {
+                    border-color: #1dbfaf;
                 }
             }
             #fullname--error {
@@ -34,12 +57,13 @@
             }
             #mail--error,
             #phone--error,
-            #addr--error {
+            #addr--error,
+            #gender--error {
                 @extend #fullname--error;
             }
             .gender {
                 display: grid;
-                grid-template-columns: 20% 80%;
+                grid-template-columns: 30% 70%;
                 align-items: center;
                 label {
                     font-weight: bold;
@@ -47,43 +71,74 @@
                 }
                 .gender--item {
                     display: flex;
+                    gap: 2rem;
                 }
             }
             button {
-                margin-top: 10px;
+                margin-top: 15px;
+                float: right;
             }
         }
     }
     .studensList {
-        background: pink;
+        background: #d0ade2;
         padding: 0px 15px 15px 15px;
+        @include phone {
+            background: transparent;
+        }
         h2 {
             font-size: 2rem;
+            text-align: center;
+            margin-bottom: 30px;
+            @include phone {
+                text-align: start;
+            }
         }
         .detail__list {
             table {
-                width: 100%;
-                tr {
-                    display: grid;
-                    grid-template-columns: 5% 15% 25% 15% 15% 10% 15%;
-                    th {
-                        font-size: 16px;
+                thead {
+                    .info {
+                        @include phone {
+                            display: none;
+                        }
+                        th {
+                            text-align: center;
+                        }
                     }
                 }
-                tr:nth-child(odd) {
-                    background-color: #ffffff;
-                    padding: 5px 0;
-                    td {
+                tbody {
+                    tr {
                         text-align: center;
-                        font-size: 14px;
-                    }
-                }
-                tr:nth-child(even) {
-                    background-color: #c9c9c9;
-                    padding: 5px 0;
-                    td {
-                        text-align: center;
-                        font-size: 14px;
+                        @include phone {
+                            display: grid;
+                            grid-template-columns: 30% 48% 22%;
+                            font-size: 12px;
+                            margin-bottom: 2rem;
+                        }
+                        td:first-child {
+                            @include phone {
+                                display: none;
+                            }
+                        }
+                        td {
+                            padding: 10px 0;
+                        }
+                        td.control {
+                            a {
+                                color: white;
+                                text-decoration: none;
+                                padding: 2px 6px;
+                                margin: 0 2px;
+                                font-size: 10px;
+                                border-radius: 3px;
+                            }
+                            a:first-child {
+                                background: rgb(49, 49, 255);
+                            }
+                            a:last-child {
+                                background: red;
+                            }
+                        }
                     }
                 }
             }
