--- a/css/style.css
+++ b/css/style.css
@@ -9,24 +9,27 @@ a {
     color: white !important;
     background: #7a9bcc;
     padding: 10px 10px;
+    text-align: center;
+    width: 100% !important;
     margin: 0 !important; } }
 
 .containerMain {
   display: grid;
   width: 90%;
   margin: auto;
-  grid-template-columns: 30% 70%; }
+  grid-template-columns: 32% 68%;
+  gap: 1rem; }
   @media (max-width: 576px) {
     .containerMain {
       display: flex;
       width: 100%;
       flex-direction: column; } }
   .containerMain .studensInfo {
-    background: #76CCE7;
-    padding: 0px 15px 15px 15px; }
+    padding: 0px 15px 15px 15px;
+    border: 1px solid #dad9d9;
+    border-radius: 10px; }
     .containerMain .studensInfo h2 {
       font-size: 20px;
-      text-align: center;
       margin-bottom: 30px; }
       @media (max-width: 576px) {
         .containerMain .studensInfo h2 {
@@ -37,11 +40,11 @@ a {
       align-items: center;
       margin: 10px 0; }
       .containerMain .studensInfo .detail__info .info label {
-        font-weight: bold;
+        font-weight: normal;
         font-size: 14px; }
       .containerMain .studensInfo .detail__info .info input {
         padding: 3px 10px;
-        border: 1px solid #ccc;
+        border: 1px solid #dad9d9;
         outline: none;
         border-radius: 3px; }
       .containerMain .studensInfo .detail__info .info input:hover {
@@ -61,53 +64,87 @@ a {
       grid-template-columns: 30% 70%;
       align-items: center; }
       .containerMain .studensInfo .detail__info .gender label {
-        font-weight: bold;
+        font-weight: normal;
         font-size: 14px; }
       .containerMain .studensInfo .detail__info .gender .gender--item {
         display: flex;
         gap: 2rem; }
-    .containerMain .studensInfo .detail__info button {
-      margin-top: 15px;
-      float: right; }
+    .containerMain .studensInfo .detail__info .handle {
+      display: grid;
+      grid-template-columns: 30% 40% 30%;
+      align-items: center; }
+      .containerMain .studensInfo .detail__info .handle button {
+        background: #00ac1d;
+        color: #ffffff;
+        font-size: 15px;
+        text-align: center;
+        padding: 3px 0px;
+        width: 70px;
+        cursor: pointer;
+        border: 1px solid #cccccc;
+        border-radius: 5px;
+        transition: background-color 0.3s ease-in-out; }
+      .containerMain .studensInfo .detail__info .handle .reset {
+        text-align: end;
+        opacity: 0.8;
+        font-size: 20px;
+        cursor: pointer; }
+        .containerMain .studensInfo .detail__info .handle .reset i {
+          padding: 10px; }
+        .containerMain .studensInfo .detail__info .handle .reset i:hover {
+          background: #25ca33;
+          border-radius: 50%;
+          color: white; }
   .containerMain .studensList {
-    background: #d0ade2;
-    padding: 0px 15px 15px 15px; }
+    padding: 0px 15px 15px 15px;
+    border: 1px solid #ccc;
+    border-radius: 10px; }
     @media (max-width: 576px) {
       .containerMain .studensList {
         background: transparent; } }
     .containerMain .studensList h2 {
       font-size: 2rem;
-      text-align: center;
       margin-bottom: 30px; }
       @media (max-width: 576px) {
         .containerMain .studensList h2 {
           text-align: start; } }
     @media (max-width: 576px) {
-      .containerMain .studensList .detail__list table thead .info {
+      .containerMain .studensList .detail__list table .info {
         display: none; } }
-    .containerMain .studensList .detail__list table thead .info th {
+    .containerMain .studensList .detail__list table .info th {
       text-align: center; }
     .containerMain .studensList .detail__list table tbody tr {
-      text-align: center; }
+      text-align: center;
+      display: grid;
+      grid-template-columns: 2.5% 16.5% 27% 13% 15% 8% 18%; }
       @media (max-width: 576px) {
         .containerMain .studensList .detail__list table tbody tr {
           display: grid;
-          grid-template-columns: 30% 48% 22%;
-          font-size: 12px;
-          margin-bottom: 2rem; } }
+          grid-template-columns: 23% 46% 31%;
+          font-size: 12px; } }
       @media (max-width: 576px) {
         .containerMain .studensList .detail__list table tbody tr td:first-child {
           display: none; } }
       .containerMain .studensList .detail__list table tbody tr td {
         padding: 10px 0; }
-      .containerMain .studensList .detail__list table tbody tr td.control a {
-        color: white;
-        text-decoration: none;
-        padding: 2px 6px;
-        margin: 0 2px;
-        font-size: 10px;
-        border-radius: 3px; }
-      .containerMain .studensList .detail__list table tbody tr td.control a:first-child {
-        background: #3131ff; }
-      .containerMain .studensList .detail__list table tbody tr td.control a:last-child {
-        background: red; }
+      .containerMain .studensList .detail__list table tbody tr td.control {
+        display: grid;
+        grid-template-columns: 30% 40% 30%;
+        gap: 3px;
+        width: 90%;
+        margin: auto; }
+        .containerMain .studensList .detail__list table tbody tr td.control a {
+          text-decoration: none;
+          padding: 3px;
+          font-size: 10px;
+          border-radius: 5px;
+          font-weight: bold; }
+        .containerMain .studensList .detail__list table tbody tr td.control a:first-child {
+          border: 1px solid #4b4bfd;
+          color: #4b4bfd; }
+        .containerMain .studensList .detail__list table tbody tr td.control a:nth-child(2) {
+          border: 1px solid #ff3d3d;
+          color: #ff3d3d; }
+        .containerMain .studensList .detail__list table tbody tr td.control a:last-child {
+          border: 1px solid orange;
+          color: orange; }
