--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,8 @@ h3 {
         color: white !important;
         background: #7a9bcc;
         padding: 10px 10px;
+        text-align: center;
+        width: 100% !important;
         margin: 0 !important;
     }
 }
@@ -12,18 +14,19 @@ h3 {
     display: grid;
     width: 90%;
     margin: auto;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 32% 68%;
+    gap: 1rem;
     @include phone {
         display: flex;
         width: 100%;
         flex-direction: column;
     }
     .studensInfo {
-        background: #76CCE7;
         padding: 0px 15px 15px 15px;
+        border: 1px solid #dad9d9;
+        border-radius: 10px;
         h2 {
             font-size: 20px;
-            text-align: center;
             margin-bottom: 30px;
             @include phone {
                 text-align: start;
@@ -36,12 +39,12 @@ h3 {
                 align-items: center;
                 margin: 10px 0;
                 label {
-                    font-weight: bold;
+                    font-weight: normal;
                     font-size: 14px;
                 }
                 input {
                     padding: 3px 10px;
-                    border: 1px solid #ccc;
+                    border: 1px solid #dad9d9;
                     outline: none;
                     border-radius: 3px;
                 }
@@ -68,7 +71,7 @@ h3 {
                 grid-template-columns: 30% 70%;
                 align-items: center;
                 label {
-                    font-weight: bold;
+                    font-weight: normal;
                     font-size: 14px;
                 }
                 .gender--item {
@@ -76,21 +79,48 @@ h3 {
                     gap: 2rem;
                 }
             }
-            button {
-                margin-top: 15px;
-                float: right;
+            .handle {
+                display: grid;
+                grid-template-columns: 30% 40% 30%;
+                align-items: center;
+                button {
+                    background: #00ac1d;
+                    color: #ffffff;
+                    font-size: 15px;
+                    text-align: center;
+                    padding: 3px 0px;
+                    width: 70px;
+                    cursor: pointer;
+                    border: 1px solid #cccccc;
+                    border-radius: 5px;
+                    transition: background-color 0.3s ease-in-out;
+                }
+                .reset {
+                    text-align: end;
+                    opacity: 0.8;
+                    font-size: 20px;
+                    cursor: pointer;
+                    i {
+                        padding: 10px;
+                    }
+                    i:hover {
+                        background: rgb(37, 202, 51);
+                        border-radius: 50%;
+                        color: white;
+                    }
+                }
             }
         }
     }
     .studensList {
-        background: #d0ade2;
         padding: 0px 15px 15px 15px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
         @include phone {
             background: transparent;
         }
         h2 {
             font-size: 2rem;
-            text-align: center;
             margin-bottom: 30px;
             @include phone {
                 text-align: start;
@@ -98,24 +128,23 @@ h3 {
         }
         .detail__list {
             table {
-                thead {
-                    .info {
-                        @include phone {
-                            display: none;
-                        }
-                        th {
-                            text-align: center;
-                        }
+                .info {
+                    @include phone {
+                        display: none;
+                    }
+                    th {
+                        text-align: center;
                     }
                 }
                 tbody {
                     tr {
                         text-align: center;
+                        display: grid;
+                        grid-template-columns: 2.5% 16.5% 27% 13% 15% 8% 18%;
                         @include phone {
                             display: grid;
-                            grid-template-columns: 30% 48% 22%;
+                            grid-template-columns: 23% 46% 31%;
                             font-size: 12px;
-                            margin-bottom: 2rem;
                         }
                         td:first-child {
                             @include phone {
@@ -126,19 +155,29 @@ h3 {
                             padding: 10px 0;
                         }
                         td.control {
+                            display: grid;
+                            grid-template-columns: 30% 40% 30%;
+                            gap: 3px;
+                            width: 90%;
+                            margin: auto;
                             a {
-                                color: white;
                                 text-decoration: none;
-                                padding: 2px 6px;
-                                margin: 0 2px;
+                                padding: 3px;
                                 font-size: 10px;
-                                border-radius: 3px;
+                                border-radius: 5px;
+                                font-weight: bold;
                             }
                             a:first-child {
-                                background: rgb(49, 49, 255);
+                                border: 1px solid #4b4bfd;
+                                color: #4b4bfd;
+                            }
+                            a:nth-child(2) {
+                                border: 1px solid #ff3d3d;
+                                color: #ff3d3d;
                             }
                             a:last-child {
-                                background: red;
+                                border: 1px solid orange;
+                                color: orange;
                             }
                         }
                     }
